--- a/app/templates/pages/teampage.html
+++ b/app/templates/pages/teampage.html
@@ -113,10 +113,10 @@
                 <div class="row">
                     <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
                         <h2>{% trans "European and national projects" %}</h2>
-                        {% with page.teampage.team.leader_projects.all|get_type:"external" as projects %}
+                        {% with page.teampage.team.partner_projects.all|get_type:"internal" as projects %}
                             {% include 'projects/inc/project_list.html' %}
                         {% endwith %}
-                        {% with page.teampage.team.partner_projects.all|get_type:"external" as projects %}
+                        {% with page.teampage.team.leader_projects.all|get_type:"external" as projects %}
                             {% include 'projects/inc/project_list.html' %}
                         {% endwith %}
                     </div>
