--- a/templates/agenda/includes/event_linecard.html
+++ b/templates/agenda/includes/event_linecard.html
@@ -25,6 +25,14 @@
                         <a href="{{ event.get_absolute_url }}">
                             <img class="event-line-box__image" src="{{ MEDIA_URL }}{% thumbnail images.0.file 203 140 %}" width="203" height="140">
                         </a>
+                    {% else %}
+                        {% with event.parent.images.all|get_type:'card' as images %}
+                            {% if images %}
+                                <a href="{{ event.get_absolute_url }}">
+                                    <img class="event-line-box__image" src="{{ MEDIA_URL }}{% thumbnail images.0.file 203 140 %}" width="203" height="140">
+                                </a>
+                            {% endif %}
+                        {% endwith %}
                     {% endif %}
                 {% endwith %}
             </div>
