--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -111,7 +111,7 @@
             <hr class="mt0" />
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
+                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
                         <h2>{% trans "European and national projects" %}</h2>
                         {% with page.teampage.team.partner_projects.all|get_type:"internal" as projects %}
                             {% include 'projects/inc/project_list.html' %}
@@ -122,6 +122,7 @@
                     </div>
                 </div>
             </div>
+
             {% if page.teampage.product_lists.all %}
                 <h4>{% trans "Products" %}</h4>
                 {% for page_product_list in page.teampage.product_lists.all %}
@@ -132,6 +133,7 @@
                   {% endwith %}
                 {% endfor %}
             {% endif %}
+
         </div>
     {% endif %}
 {% endblock %}
