--- a/static/src/sass/modules/boxes/_job-line-box.scss
+++ b/static/src/sass/modules/boxes/_job-line-box.scss
@@ -26,6 +26,12 @@ $module: ".job-line-box";
 
         }
 
+        #{$module}__image {
+
+            border-radius: 150px;
+
+        }
+
     }
 
     &__title {
