--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -112,11 +112,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
-                        <h2>{% trans "European and national projects" %}</h2>
+                        <h2>{% trans "Research topics and related projects" %}</h2>
                         {% with page.teampage.team.partner_projects.all|get_type:"internal" as projects %}
                             {% include 'projects/inc/project_list.html' %}
                         {% endwith %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
+                        <h2>{% trans "European and national projects" %}</h2>
                         {% with page.teampage.team.leader_projects.all|get_type:"external" as projects %}
+                            {% include 'projects/inc/project_list.html' %}
+                        {% endwith %}
+                        {% with page.teampage.team.partner_projects.all|get_type:"external" as projects %}
                             {% include 'projects/inc/project_list.html' %}
                         {% endwith %}
                     </div>
