--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -157,25 +157,24 @@
 
             </div>
 
-            <div class="container-fluid">
+            <div class="container">
 
-                <div class="row tac">
+                <div class="row">
 
-                    {% for person in event.persons.all %}
+                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
 
-                        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                        {% for person in event.persons.all %}
 
-                            <div class="article-box article-box--person" >
                                 {% with person.person as person %}
-                                    {% include "network/inc/person/person_card_square.html" %}
+                                    {% include "network/inc/person/person_card_circle.html" %}
                                 {% endwith %}
-                            </div>
 
-                        </div>
+                        {% endfor %}
 
-                    {% endfor %}
+                    </div>
 
                 </div>
+
             </div>
 
         </div>
