--- a/templates/network/inc/person/list_square_style.html
+++ b/templates/network/inc/person/list_square_style.html
@@ -29,11 +29,17 @@
 
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
-                        {% with person_list_block_inline.person as person %}
+                        <div class="row">
 
-                                {% include "network/inc/person/person_card_square.html" %}
+                            {% with person_list_block_inline.person as person %}
 
-                        {% endwith %}
+                                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                                    {% include "network/inc/person/person_card_square.html" %}
+                                </div>
+
+                            {% endwith %}
+
+                        </div>
 
                     </div>
 
