--- a/templates/network/organization_list.html
+++ b/templates/network/organization_list.html
@@ -59,7 +59,7 @@
                                     {{ organization.city }}, {{ organization.country.name }}
                                 </div>
                                 <div class="">
-                                    {{ organization.type }}
+                                    {{ organization.type }}, {{ organization.type.css_class }}
                                 </div>
                             </li>
 
