--- a/app/templates/agenda/includes/event_date.html
+++ b/app/templates/agenda/includes/event_date.html
@@ -39,28 +39,33 @@
         {% with event.periods.all|same_time_in_periods as same_time_in_periods %}
         {% for period in event.periods.all %}
             {% if period.date_to and period.date_to|date:"H:i" != "23:59" %}
-                {{ period.date_from|date:"l j F" }} {% trans "from" %} {{ period.date_from|date:"H\hi" }} {% trans "to" %} {{ period.date_to|date:"H\hi" }}<br>
+                {{ period.date_from|date:"l j F" }}
+                {% if period|period_is_more_than_hours:4 %}
+                    {{ period.date_from|date:"H\hi" }} {% trans "to" %} {{ period.date_to|date:"H\hi" }}<br>
+                {% else %}
+                    {{ period.date_from|date:"H\hi" }}<br>
+                {% endif %}
             {% else %}
                 {% if event.periods.all|length > 1 and not forloop.last %}
-                    {{ period.date_from|date:"l j" }}{% if event.periods.all|length == 2 %} {% trans "and" %} {% else %}, {% endif %}
+                    {{ period.date_from|date:"l j F" }}{% if event.periods.all|length == 2 %} {% trans "and" %} {% else %}, {% endif %}
                 {% else %}
                     {{ period.date_from|date:"l j F" }}
                     {% if event.periods.all|length > 1 and forloop.first %} {% trans "and" %}{% endif %}
                 {% endif %}
                 {% if same_time_in_periods and forloop.last %}
-                    <br>{{ period.date_from|date:"H\hi" }}
+                    {{ period.date_from|date:"H\hi" }}
                 {% elif not same_time_in_periods %}
-                    <br>{{ period.date_from|date:"H\hi" }}<br>
+                    {{ period.date_from|date:"H\hi" }}<br>
                 {% endif %}
             {% endif %}
         {% endfor %}
         {% endwith %}
       {% else %}
-        {% trans "from" %} {{ event.start|date:"l j F" }} {% trans "to" %} {{ event.end|date:"l j F" }}<br>{{ event.start|date:"H\hi" }} - {{ event.end|date:"H\hi" }}
+        {{ event.start|date:"l j F" }} {% trans "to" %} {{ event.end|date:"l j F" }}<br>{{ event.start|date:"H\hi" }} - {{ event.end|date:"H\hi" }}
       {% endif %}
     <!-- Start and end date are completely different  -->
     {% else %}
-        {% trans "from" %} {{ event.start|date:"j F" }} {% trans "to" %} {{ event.end|date:"j F" }}
+        {{ event.start|date:"j F" }} {% trans "to" %} {{ event.end|date:"j F" }}
     {% endif %}
 
 {% endif %}
