--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -72,7 +72,7 @@
 
                     <div class="page__filters">
                         {% keywords_for mezzanine_agenda.event as tags %}
-                        {% all_events as all_events %}
+                        {# {% all_events as all_events %}#}
                         {% if tags %}
                             {% comment %}
                                 <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %}</a>
