--- a/templates/agenda/includes/event_date_line.html
+++ b/templates/agenda/includes/event_date_line.html
@@ -2,10 +2,10 @@
 {% load event_tags %}
 
 {% if event.start and not event.end %}
-    {{ event.start|date:"l j F" }}<br>
+    {{ event.start|date:"l j F" }}
 {% else %}
     {% if event.start|date:"d.m.y" == event.end|date:"d.m.y" %}
-        {{ event.start|date:"l j F" }}<br>
+        {{ event.start|date:"l j F" }}
     {% else %}
         {{ event.start|date:"j F" }} {% trans "to" %} {{ event.end|date:"j F" }}
     {% endif %}
